--- a/3.html
+++ b/3.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="Sources\logo-placeholder-image.png" alt="Logo" class="logo">
+        <img src="Sources\rättlogo.png" alt="Logo" class="logo">
         <nav>
             <ul class="nav-list" id="navLinks">
                 <li><a href="Pärmar&Poesi/index.html">Hem</a></li>
@@ -24,5 +24,7 @@
             </ul>
         </nav>
     </header>
+
+    
 </body>
 </html>
