--- a/index.html
+++ b/index.html
@@ -18,24 +18,28 @@
             <input type="checkbox" id="menu-toggle" class="menu-toggle">
             <label for="menu-toggle" class="hamburger" aria-label="Toggle navigation">&#9776;</label>
             <ul class="nav-list-mobile" id="navLinksMobile">
-                <li><a href="Pärmar&Poesi/index.html">Hem</a></li>
+                <li><a href="">Hem</a></li>
                 <li><a href="erbjudanden.html">Erbjudanden</a></li>
                 <li><a href="kontakt.html">Kontakt & Hitta</a></li>
             </ul>
         </nav>
     </header>
+
         <main class="main-text">
             <h1 class="welcome-text">Välkommen till Pärmar & Poesi</h1>
             <p class="quote">"Sveriges bästa boksida" - Carl XVI Gustaf</p>
         </main>
+
         <section class="boxes">
+            
             <article class="box1">
                 <!-- <img src="Sources\1.jpg" alt="1984" class="box-image"> -->
                 <div ::-webkit-scrollbar class="box-content1">
-                    <h2 class="box1-content-text">Vårat sortiment</h2>
+                    <h2 class="box1-content-text"><a class="link" href="3.html">Vårat sortiment</h2></a>
                         <section>
                             <ul class="scrollbar-genre-nav">
                                 <li class="genre-box">Skräck</li>
+                                <li class="genre-box">Thriller</li>
                                 <li class="genre-box">Romantik</li>
                                 <li class="genre-box">Krim</li>
                                 <li class="genre-box">Sci-fi</li>
@@ -44,9 +48,9 @@
                                 <li class="genre-box">Poesi</li>
                             </ul>
                         </section>
-                    
                 </div>
             </article>
+
             <article class="box2">
                 <a href="1.html">
                     <img src="sources/top-10.png" alt="Top-10-alt">
@@ -66,6 +70,7 @@
         </section>
 
         <section class="small-boxes">
+
             <article class="small-box1">
                 <img src="Sources/kungen.jpg" alt="Placeholder Image" class="small-box-image">
                 <div class="small-box-content">
@@ -74,6 +79,7 @@
                     <p class="small-quote">"Ska jag vara ärlig så har jag aldrig läst hel bok, men jag har mina favoriter"</p>
                 </div>
             </article>
+
             <article class="small-box2">
                 <img src="Sources/rättevent.png" alt="Placeholder Image" class="small-box-image">
                 <div class="small-box-content">
@@ -81,6 +87,7 @@
                     <p>Se våra kommande event, bokmässor och annat kul!</p>
                 </div>
             </article>
+
         </section>
 
 
