--- a/index.html
+++ b/index.html
@@ -31,16 +31,17 @@
         </main>
 
         <section class="boxes">
-            
+
             <article class="box1">
                 <!-- <img src="Sources\1.jpg" alt="1984" class="box-image"> -->
                 <div ::-webkit-scrollbar class="box-content1">
-                    <h2 class="box1-content-text"><a class="link" href="3.html">Vårat sortiment</h2></a>
+                    <h2 class="box1-content-text"><a class="linkhtml3" href="3.html">Vårat sortiment</h2></a>
                         <section>
                             <ul class="scrollbar-genre-nav">
                                 <li class="genre-box">Skräck</li>
                                 <li class="genre-box">Thriller</li>
                                 <li class="genre-box">Romantik</li>
+                                <li class="genre-box">Drama</li>
                                 <li class="genre-box">Krim</li>
                                 <li class="genre-box">Sci-fi</li>
                                 <li class="genre-box">Komedi</li>
