--- a/1.html
+++ b/1.html
@@ -64,7 +64,7 @@
 
             <article class="box4">
                 <p class="nummer">4.</p>
-                <img src="Sources/sleepwalker.jpg" alt="Omslag Sömngångaren" class="box-image">
+                <img src="Sources/1.jpg" alt="Omslag Sömngångaren" class="box-image">
                 <div class="box-content1">
                     <h2>Lars Kepler - Sömngångaren</h2>
                     <p>Sömngångaren är en psykologisk thriller som drar dig in i en värld av mysterier och skräck.
