--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@
                     <h2 class="box1-content-text"><a class="linkhtml3" href="3.html">Vårat sortiment</h2></a>
                         <section>
                             <ul class="scrollbar-genre-nav">
-                                <li class="genre-box">Skräck</li>
-                                <li class="genre-box">Thriller</li>
-                                <li class="genre-box">Romantik</li>
-                                <li class="genre-box">Drama</li>
-                                <li class="genre-box">Krim</li>
-                                <li class="genre-box">Sci-fi</li>
-                                <li class="genre-box">Komedi</li>
-                                <li class="genre-box">Historia</li>
-                                <li class="genre-box">Poesi</li>
+                                <li class="genre-box1">Skräck</li>
+                                <li class="genre-box2">Thriller</li>
+                                <li class="genre-box3">Romantik</li>
+                                <li class="genre-box4">Drama</li>
+                                <li class="genre-box5">Krim</li>
+                                <li class="genre-box6">Sci-fi</li>
+                                <li class="genre-box7">Komedi</li>
+                                <li class="genre-box8">Historia</li>
+                                <li class="genre-box9">Poesi</li>
                             </ul>
                         </section>
                 </div>
