--- a/index.html
+++ b/index.html
@@ -76,15 +76,17 @@
                 <img src="Sources/kungen.jpg" alt="Placeholder Image" class="small-box-image">
                 <div class="small-box-content">
                     <h2>Kungens Favoriter</h2>
-                    <p>Karl Gustav rankar sina topp 10 favoritböcker efter omslag.</p>
+                    <p>Karl Gustav rankar sina topp 3 favoritböcker efter omslag.</p>
                     <p class="small-quote">"Ska jag vara ärlig så har jag aldrig läst hel bok, men jag har mina favoriter"</p>
                 </div>
             </article>
 
             <article class="small-box2">
-                <img src="Sources/rättevent.png" alt="Placeholder Image" class="small-box-image">
+                <a href="4.html">
+                    <img src="sources/rättevent.png" alt="Top-10-alt" class="small-box-image">
+                  </a>
                 <div class="small-box-content">
-                    <h2>Kommande Event</h2>
+                    <h2>Kommande Evenemang</h2>
                     <p>Se våra kommande event, bokmässor och annat kul!</p>
                 </div>
             </article>
