--- a/erbjudanden.html
+++ b/erbjudanden.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <header>
-        <img src="Sources\logo-placeholder-image.png" alt="Logo" class="logo">
+        <a href="index.html">
+            <img src="sources/rättlogo.png" alt="Logo" class="logo">
+          </a>
         <nav>
             <ul class="nav-list" id="navLinks">
                 <li><a href="Pärmar&Poesi/index.html">Hem</a></li>
