--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
             <ul class="nav-list" id="navLinks">
                 <li><a href="Pärmar&Poesi/index.html">Hem</a></li>
                 <li><a href="erbjudanden.html">Erbjudanden</a></li>
-                <li><a href="kontakt.html">Kontakt & Hitta</a></li>
+                <li><a href="5.html">Kontakt & Hitta</a></li>
             </ul>
             <input type="checkbox" id="menu-toggle" class="menu-toggle">
             <label for="menu-toggle" class="hamburger" aria-label="Toggle navigation">&#9776;</label>
             <ul class="nav-list-mobile" id="navLinksMobile">
                 <li><a href="">Hem</a></li>
                 <li><a href="erbjudanden.html">Erbjudanden</a></li>
-                <li><a href="kontakt.html">Kontakt & Hitta</a></li>
+                <li><a href="5.html">Kontakt & Hitta</a></li>
             </ul>
         </nav>
     </header>
