--- a/3.html
+++ b/3.html
@@ -11,14 +11,14 @@
         <img src="Sources\rättlogo.png" alt="Logo" class="logo">
         <nav>
             <ul class="nav-list" id="navLinks">
-                <li><a href="Pärmar&Poesi/index.html">Hem</a></li>
+                <li><a href="index.html">Hem</a></li>
                 <li><a href="erbjudanden.html">Erbjudanden</a></li>
                 <li><a href="kontakt.html">Kontakt & Hitta</a></li>
             </ul>
             <input type="checkbox" id="menu-toggle" class="menu-toggle">
             <label for="menu-toggle" class="hamburger" aria-label="Toggle navigation">&#9776;</label>
             <ul class="nav-list-mobile" id="navLinksMobile">
-                <li><a href="Pärmar&Poesi/index.html">Hem</a></li>
+                <li><a href="index.html">Hem</a></li>
                 <li><a href="erbjudanden.html">Erbjudanden</a></li>
                 <li><a href="kontakt.html">Kontakt & Hitta</a></li>
             </ul>
@@ -27,10 +27,13 @@
 
     <main>
 
+        <section class="sort-main-text">
+            <h1>Pärmar och Poesi</h1>
+            <p>Bläddra genom olika genrer</p>
+        </section>
+
         <article>
             
-            <h1>Vårat sortiment</h1>
-                
             <section ::-webkit-scrollbar class="boxes">
                 <h2>Skräck</h2>
 
@@ -96,7 +99,7 @@
                 <h2>Deckare</h2>
 
                 <ul class="bokbox"></ul>
-                    <li><img src="" alt="krimbok"></li>
+                    <li><img src="Sources\sortböcker (1).jpg" alt="krimbok"></li>
                     <li><img src="" alt="krimbok"></li>
                     <li><img src="" alt="krimbok"></li>
                     <li><img src="" alt="krimbok"></li>
