--- a/erbjudanden.html
+++ b/erbjudanden.html
@@ -11,14 +11,14 @@
         <img src="Sources\logo-placeholder-image.png" alt="Logo" class="logo">
         <nav>
             <ul class="nav-list" id="navLinks">
-                <li><a href="Pärmar&Poesi/index.html">Hem</a></li>
+                <li><a href="index.html">Hem</a></li>
                 <li><a href="erbjudanden.html">Erbjudanden</a></li>
                 <li><a href="kontakt.html">Kontakt & Hitta</a></li>
             </ul>
             <input type="checkbox" id="menu-toggle" class="menu-toggle">
             <label for="menu-toggle" class="hamburger" aria-label="Toggle navigation">&#9776;</label>
             <ul class="nav-list-mobile" id="navLinksMobile">
-                <li><a href="Pärmar&Poesi/index.html">Hem</a></li>
+                <li><a href="index.html">Hem</a></li>
                 <li><a href="erbjudanden.html">Erbjudanden</a></li>
                 <li><a href="kontakt.html">Kontakt & Hitta</a></li>
             </ul>
