--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <input type="checkbox" id="menu-toggle" class="menu-toggle">
             <label for="menu-toggle" class="hamburger" aria-label="Toggle navigation">&#9776;</label>
             <ul class="nav-list-mobile" id="navLinksMobile">
-                <li><a href="">Hem</a></li>
+                <li><a href="index.html">Hem</a></li>
                 <li><a href="erbjudanden.html">Erbjudanden</a></li>
                 <li><a href="kontakt.html">Kontakt & Hitta</a></li>
             </ul>
