--- a/3.html
+++ b/3.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pärmar & Poesi</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="stylesort.css">
 </head>
+
 <body>
     <header>
         <a href="index.html">
@@ -13,14 +15,14 @@
           </a>
         <nav>
             <ul class="nav-list" id="navLinks">
-                <li><a href="Pärmar&Poesi/index.html">Hem</a></li>
+                <li><a href="index.html">Hem</a></li>
                 <li><a href="erbjudanden.html">Erbjudanden</a></li>
                 <li><a href="kontakt.html">Kontakt & Hitta</a></li>
             </ul>
             <input type="checkbox" id="menu-toggle" class="menu-toggle">
             <label for="menu-toggle" class="hamburger" aria-label="Toggle navigation">&#9776;</label>
             <ul class="nav-list-mobile" id="navLinksMobile">
-                <li><a href="Pärmar&Poesi/index.html">Hem</a></li>
+                <li><a href="index.html">Hem</a></li>
                 <li><a href="erbjudanden.html">Erbjudanden</a></li>
                 <li><a href="kontakt.html">Kontakt & Hitta</a></li>
             </ul>
@@ -29,23 +31,26 @@
 
     <main>
 
+        <section class="sort-main-text">
+            <h1>Pärmar och Poesi</h1>
+            <p class="paragraf-1">Bläddra genom olika genrer</p>
+        </section>
+
         <article>
-            
-            <h1>Vårat sortiment</h1>
-                
+
+            <h2 class="sortiment">Vårat sortiment</h2>
             <section ::-webkit-scrollbar class="boxes">
                 <h2>Skräck</h2>
 
                 <ul class="bokbox">
-                    <li><img src="" alt="skräckbok"></li>
-                    <li><img src="" alt="skräckbok"></li>
-                    <li><img src="" alt="skräckbok"></li>
-                    <li><img src="" alt="skräckbok"></li>
-                    <li><img src="" alt="skräckbok"></li>
-                    <li><img src="" alt="skräckbok"></li>
-                    <li><img src="" alt="skräckbok"></li>
-                    <li><img src="" alt="skräckbok"></li>
-
+                    <li><img src="Sources\sortböcker (4).jpg" alt="pärmar och poesi skräckbok"></li>
+                    <li><img src="Sources\sortböcker (4).jpg" alt="pärmar och poesi skräckbok"></li>
+                    <li><img src="Sources\sortböcker (4).jpg" alt="pärmar och poesi skräckbok"></li>
+                    <li><img src="Sources\sortböcker (4).jpg" alt="pärmar och poesi skräckbok"></li>
+                    <li><img src="Sources\sortböcker (4).jpg" alt="pärmar och poesi skräckbok"></li>
+                    <li><img src="Sources\sortböcker (4).jpg" alt="pärmar och poesi skräckbok"></li>
+                    <li><img src="Sources\sortböcker (4).jpg" alt="pärmar och poesi skräckbok"></li>
+                    <li><img src="Sources\sortböcker (4).jpg" alt="pärmar och poesi skräckbok"></li>
                 </ul>
             </section>
 
@@ -53,119 +58,119 @@
                 <h2>Thriller</h2>
 
                 <ul class="bokbox">
-                    <li><img src="" alt="thrillerbok"></li>
-                    <li><img src="" alt="thrillerbok"></li>
-                    <li><img src="" alt="thrillerbok"></li>
-                    <li><img src="" alt="thrillerbok"></li>
-                    <li><img src="" alt="thrillerbok"></li>
-                    <li><img src="" alt="thrillerbok"></li>
-                    <li><img src="" alt="thrillerbok"></li>
-                    <li><img src="" alt="thrillerbok"></li>
+                    <li><img src="Sources\sortböcker (3).png" alt="pärmar och poesi thrillerbok"></li>
+                    <li><img src="Sources\sortböcker (3).png" alt="pärmar och poesi thrillerbok"></li>
+                    <li><img src="Sources\sortböcker (3).png" alt="pärmar och poesi thrillerbok"></li>
+                    <li><img src="Sources\sortböcker (3).png" alt="pärmar och poesi thrillerbok"></li>
+                    <li><img src="Sources\sortböcker (3).png" alt="pärmar och poesi thrillerbok"></li>
+                    <li><img src="Sources\sortböcker (3).png" alt="pärmar och poesi thrillerbok"></li>
+                    <li><img src="Sources\sortböcker (3).png" alt="pärmar och poesi thrillerbok"></li>
+                    <li><img src="Sources\sortböcker (3).png" alt="pärmar och poesi thrillerbok"></li>
                 </ul>
             </section>
 
             <section ::-webkit-scrollbar class="boxes">
                 <h2>Romantik</h2>
 
-                <ul class="bokbox"></ul>
-                    <li><img src="" alt="romantikbok"></li>
-                    <li><img src="" alt="romantikbok"></li>
-                    <li><img src="" alt="romantikbok"></li>
-                    <li><img src="" alt="romantikbok"></li>
-                    <li><img src="" alt="romantikbok"></li>
-                    <li><img src="" alt="romantikbok"></li>
-                    <li><img src="" alt="romantikbok"></li>
-                    <li><img src="" alt="romantikbok"></li>
+                <ul class="bokbox">
+                    <li><img src="Sources\sortböcker (2).jpg" alt="pärmar och poesi romantikbok"></li>
+                    <li><img src="Sources\sortböcker (2).jpg" alt="pärmar och poesi romantikbok"></li>
+                    <li><img src="Sources\sortböcker (2).jpg" alt="pärmar och poesi romantikbok"></li>
+                    <li><img src="Sources\sortböcker (2).jpg" alt="pärmar och poesi romantikbok"></li>
+                    <li><img src="Sources\sortböcker (2).jpg" alt="pärmar och poesi romantikbok"></li>
+                    <li><img src="Sources\sortböcker (2).jpg" alt="pärmar och poesi romantikbok"></li>
+                    <li><img src="Sources\sortböcker (2).jpg" alt="pärmar och poesi romantikbok"></li>
+                    <li><img src="Sources\sortböcker (2).jpg" alt="pärmar och poesi romantikbok"></li>
                 </ul>
             </section>
 
             <section ::-webkit-scrollbar class="boxes">
                 <h2>Drama</h2>
 
-                <ul class="bokbox"></ul>
-                    <li><img src="" alt="dramabok"></li>
-                    <li><img src="" alt="dramabok"></li>
-                    <li><img src="" alt="dramabok"></li>
-                    <li><img src="" alt="dramabok"></li>
-                    <li><img src="" alt="dramabok"></li>
-                    <li><img src="" alt="dramabok"></li>
-                    <li><img src="" alt="dramabok"></li>
-                    <li><img src="" alt="dramabok"></li>
+                <ul class="bokbox">
+                    <li><img src="Sources\sortböcker (2).png" alt="pärmar och poesi dramabok"></li>
+                    <li><img src="Sources\sortböcker (2).png" alt="pärmar och poesi dramabok"></li>
+                    <li><img src="Sources\sortböcker (2).png" alt="pärmar och poesi dramabok"></li>
+                    <li><img src="Sources\sortböcker (2).png" alt="pärmar och poesi dramabok"></li>
+                    <li><img src="Sources\sortböcker (2).png" alt="pärmar och poesi dramabok"></li>
+                    <li><img src="Sources\sortböcker (2).png" alt="pärmar och poesi dramabok"></li>
+                    <li><img src="Sources\sortböcker (2).png" alt="pärmar och poesi dramabok"></li>
+                    <li><img src="Sources\sortböcker (2).png" alt="pärmar och poesi dramabok"></li>
                 </ul>
             </section>
 
             <section ::-webkit-scrollbar class="boxes">
                 <h2>Deckare</h2>
 
-                <ul class="bokbox"></ul>
-                    <li><img src="" alt="krimbok"></li>
-                    <li><img src="" alt="krimbok"></li>
-                    <li><img src="" alt="krimbok"></li>
-                    <li><img src="" alt="krimbok"></li>
-                    <li><img src="" alt="krimbok"></li>
-                    <li><img src="" alt="krimbok"></li>
-                    <li><img src="" alt="krimbok"></li>
-                    <li><img src="" alt="krimbok"></li>
+                <ul class="bokbox">
+                    <li><img src="Sources\sortböcker (1).jpg" alt="pärmar och poesi krimbok"></li>
+                    <li><img src="Sources\sortböcker (1).jpg" alt="pärmar och poesi krimbok"></li>
+                    <li><img src="Sources\sortböcker (1).jpg" alt="pärmar och poesi krimbok"></li>
+                    <li><img src="Sources\sortböcker (1).jpg" alt="pärmar och poesi krimbok"></li>
+                    <li><img src="Sources\sortböcker (1).jpg" alt="pärmar och poesi krimbok"></li>
+                    <li><img src="Sources\sortböcker (1).jpg" alt="pärmar och poesi krimbok"></li>
+                    <li><img src="Sources\sortböcker (1).jpg" alt="pärmar och poesi krimbok"></li>
+                    <li><img src="Sources\sortböcker (1).jpg" alt="pärmar och poesi krimbok"></li>
                 </ul>
             </section>
 
             <section ::-webkit-scrollbar class="boxes">
                 <h2>Sci-Fi</h2>
 
-                <ul class="bokbox"></ul>
-                    <li><img src="" alt="Scifibok"></li>
-                    <li><img src="" alt="Scifibok"></li>
-                    <li><img src="" alt="Scifibok"></li>
-                    <li><img src="" alt="Scifibok"></li>
-                    <li><img src="" alt="Scifibok"></li>
-                    <li><img src="" alt="Scifibok"></li>
-                    <li><img src="" alt="Scifibok"></li>
-                    <li><img src="" alt="Scifibok"></li>
+                <ul class="bokbox">
+                    <li><img src="Sources\sortböcker (3).jpg" alt="pärmar och poesi Scifibok"></li>
+                    <li><img src="Sources\sortböcker (3).jpg" alt="pärmar och poesi Scifibok"></li>
+                    <li><img src="Sources\sortböcker (3).jpg" alt="pärmar och poesi Scifibok"></li>
+                    <li><img src="Sources\sortböcker (3).jpg" alt="pärmar och poesi Scifibok"></li>
+                    <li><img src="Sources\sortböcker (3).jpg" alt="pärmar och poesi Scifibok"></li>
+                    <li><img src="Sources\sortböcker (3).jpg" alt="pärmar och poesi Scifibok"></li>
+                    <li><img src="Sources\sortböcker (3).jpg" alt="pärmar och poesi Scifibok"></li>
+                    <li><img src="Sources\sortböcker (3).jpg" alt="pärmar och poesi Scifibok"></li>
                 </ul>
             </section>
 
             <section ::-webkit-scrollbar class="boxes">
                 <h2>Komedi</h2>
 
-                <ul class="bokbox"></ul>
-                    <li><img src="" alt="komedibok"></li>
-                    <li><img src="" alt="komedibok"></li>
-                    <li><img src="" alt="komedibok"></li>
-                    <li><img src="" alt="komedibok"></li>
-                    <li><img src="" alt="komedibok"></li>
-                    <li><img src="" alt="komedibok"></li>
-                    <li><img src="" alt="komedibok"></li>
-                    <li><img src="" alt="komedibok"></li>
+                <ul class="bokbox">
+                    <li><img src="Sources\sortböcker (5).png" alt="pärmar och poesi komedibok"></li>
+                    <li><img src="Sources\sortböcker (5).png" alt="pärmar och poesi komedibok"></li>
+                    <li><img src="Sources\sortböcker (5).png" alt="pärmar och poesi komedibok"></li>
+                    <li><img src="Sources\sortböcker (5).png" alt="pärmar och poesi komedibok"></li>
+                    <li><img src="Sources\sortböcker (5).png" alt="pärmar och poesi komedibok"></li>
+                    <li><img src="Sources\sortböcker (5).png" alt="pärmar och poesi komedibok"></li>
+                    <li><img src="Sources\sortböcker (5).png" alt="pärmar och poesi komedibok"></li>
+                    <li><img src="Sources\sortböcker (5).png" alt="pärmar och poesi komedibok"></li>
                 </ul>
             </section>
 
             <section ::-webkit-scrollbar class="boxes">
-                 <h2>Historia</h2>
+                <h2>Historia</h2>
 
-                 <ul class="bokbox"></ul>
-                     <li><img src="" alt="historiabok"></li>
-                     <li><img src="" alt="historiabok"></li>
-                     <li><img src="" alt="historiabok"></li>
-                     <li><img src="" alt="historiabok"></li>
-                     <li><img src="" alt="historiabok"></li>
-                     <li><img src="" alt="historiabok"></li>
-                     <li><img src="" alt="historiabok"></li>
-                     <li><img src="" alt="historiabok"></li>
-                 </ul>
+                <ul class="bokbox">
+                    <li><img src="Sources\sortböcker (1).png" alt="pärmar och poesi historiabok"></li>
+                    <li><img src="Sources\sortböcker (1).png" alt="pärmar och poesi historiabok"></li>
+                    <li><img src="Sources\sortböcker (1).png" alt="pärmar och poesi historiabok"></li>
+                    <li><img src="Sources\sortböcker (1).png" alt="pärmar och poesi historiabok"></li>
+                    <li><img src="Sources\sortböcker (1).png" alt="pärmar och poesi historiabok"></li>
+                    <li><img src="Sources\sortböcker (1).png" alt="pärmar och poesi historiabok"></li>
+                    <li><img src="Sources\sortböcker (1).png" alt="pärmar och poesi historiabok"></li>
+                    <li><img src="Sources\sortböcker (1).png" alt="pärmar och poesi historiabok"></li>
+                </ul>
             </section>
 
             <section ::-webkit-scrollbar class="boxes">
                 <h2>Poesi</h2>
 
-                <ul class="bokbox"></ul>
-                    <li><img src="" alt="poesibok"></li>
-                    <li><img src="" alt="poesibok"></li>
-                    <li><img src="" alt="poesibok"></li>
-                    <li><img src="" alt="poesibok"></li>
-                    <li><img src="" alt="poesibok"></li>
-                    <li><img src="" alt="poesibok"></li>
-                    <li><img src="" alt="poesibok"></li>
-                    <li><img src="" alt="poesibok"></li>
+                <ul class="bokbox">
+                    <li><img src="Sources\sortböcker (4).png" alt="pärmar och poesi poesibok"></li>
+                    <li><img src="Sources\sortböcker (4).png" alt="pärmar och poesi poesibok"></li>
+                    <li><img src="Sources\sortböcker (4).png" alt="pärmar och poesi poesibok"></li>
+                    <li><img src="Sources\sortböcker (4).png" alt="pärmar och poesi poesibok"></li>
+                    <li><img src="Sources\sortböcker (4).png" alt="pärmar och poesi poesibok"></li>
+                    <li><img src="Sources\sortböcker (4).png" alt="pärmar och poesi poesibok"></li>
+                    <li><img src="Sources\sortböcker (4).png" alt="pärmar och poesi poesibok"></li>
+                    <li><img src="Sources\sortböcker (4).png" alt="pärmar och poesi poesibok"></li>
                 </ul>
             </section>
 
@@ -183,4 +188,5 @@
         </article>
     </footer>
 </body>
+
 </html>
