--- a/kontakt.html
+++ b/kontakt.html
@@ -6,18 +6,27 @@
     <title>Pärmar & Poesi - Kontakta Oss</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<<<<<<< HEAD
 <body class="bg-gray-100">
 
-<header class="flex justify-between items-center p-5 bg-gray-300">
-    <img src="sources/logo.png" alt="Logo" class="w-40 rounded-full">
-    <nav>
-        <ul class="flex space-x-4">
-            <li><a href="Pärmar&Poesi/index.html" class="text-gray-800">Hem</a></li>
-            <li><a href="#kontakt" class="text-gray-800">Kontakta Oss</a></li>
-        </ul>
-    </nav>
-</header>
+    <header>
+        <a href="index.html">
+            <img src="sources/rättlogo.png" alt="Logo" class="logo">
+          </a>
+        <nav>
+            <ul class="nav-list" id="navLinks">
+                <li><a href="Pärmar&Poesi/index.html">Hem</a></li>
+                <li><a href="3.html">Sortiment</a></li>
+                <li><a href="5.html">Kontakt & Hitta</a></li>
+            </ul>
+            <input type="checkbox" id="menu-toggle" class="menu-toggle">
+            <label for="menu-toggle" class="hamburger" aria-label="Toggle navigation">&#9776;</label>
+            <ul class="nav-list-mobile" id="navLinksMobile">
+                <li><a href="index.html">Hem</a></li>
+                <li><a href="3.html">Sortiment</a></li>
+                <li><a href="5.html">Kontakt & Hitta</a></li>
+            </ul>
+        </nav>
+    </header>
 
 <main class="p-5">
     <section id="kontakt">
@@ -51,7 +60,6 @@
     </div>
 </footer>
 
-=======
 <body>
     <header>
         <a href="index.html">
@@ -72,6 +80,5 @@
             </ul>
         </nav>
     </header>
->>>>>>> ffb3b3c0a216d6f5596ab2408640464bec10cb83
 </body>
 </html>
