--- a/1.html
+++ b/1.html
@@ -13,21 +13,22 @@
           </a>
         <nav>
             <ul class="nav-list" id="navLinks">
-                <li><a href="index.html">Hem</a></li>
-                <li><a href="erbjudanden.html">Erbjudanden</a></li>
-                <li><a href="kontakt.html">Kontakt & Hitta</a></li>
+                <li><a href="Pärmar&Poesi/index.html">Hem</a></li>
+                <li><a href="3.html">Sortiment</a></li>
+                <li><a href="5.html">Kontakt & Hitta</a></li>
             </ul>
             <input type="checkbox" id="menu-toggle" class="menu-toggle">
             <label for="menu-toggle" class="hamburger" aria-label="Toggle navigation">&#9776;</label>
             <ul class="nav-list-mobile" id="navLinksMobile">
                 <li><a href="index.html">Hem</a></li>
-                <li><a href="erbjudanden.html">Erbjudanden</a></li>
-                <li><a href="kontakt.html">Kontakt & Hitta</a></li>
+                <li><a href="3.html">Sortiment</a></li>
+                <li><a href="5.html">Kontakt & Hitta</a></li>
             </ul>
         </nav>
     </header>
+    
         <main>
-            <h1>Våra Recensioner</h1>
+            <h1>Våra Recensioner - Topp 10</h1>
         <section class="boxes">
             <article class="box1">
                 <p class="nummer">1.</p>
