--- a/3.html
+++ b/3.html
@@ -15,16 +15,16 @@
           </a>
         <nav>
             <ul class="nav-list" id="navLinks">
-                <li><a href="index.html">Hem</a></li>
-                <li><a href="erbjudanden.html">Erbjudanden</a></li>
-                <li><a href="kontakt.html">Kontakt & Hitta</a></li>
+                <li><a href="Pärmar&Poesi/index.html">Hem</a></li>
+                <li><a href="3.html">Sortiment</a></li>
+                <li><a href="5.html">Kontakt & Hitta</a></li>
             </ul>
             <input type="checkbox" id="menu-toggle" class="menu-toggle">
             <label for="menu-toggle" class="hamburger" aria-label="Toggle navigation">&#9776;</label>
             <ul class="nav-list-mobile" id="navLinksMobile">
                 <li><a href="index.html">Hem</a></li>
-                <li><a href="erbjudanden.html">Erbjudanden</a></li>
-                <li><a href="kontakt.html">Kontakt & Hitta</a></li>
+                <li><a href="3.html">Sortiment</a></li>
+                <li><a href="5.html">Kontakt & Hitta</a></li>
             </ul>
         </nav>
     </header>
