--- a/1.html
+++ b/1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pärmar & Poesi</title>
-    <link rel="stylesheet" href="styleres.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -30,7 +30,7 @@
         <main>
             <h1>Våra Recensioner - Topp 10</h1>
         <section class="boxes">
-            <article class="box1">
+            <article class="resbox1">
                 <p class="nummer">1.</p>
                 <img src="Sources\fightclub.jpg" alt="Omslag Fight Club" class="box-image">
                 <div class="box-content1">
@@ -40,7 +40,7 @@
                 </div>
             </article>
 
-            <article class="box2">
+            <article class="resbox2">
                 <p class="nummer">2.</p>
                 <img src="Sources\1.jpg" alt="Omslag 1984" class="box-image">
                 <div class="box-content1">
@@ -52,7 +52,7 @@
                 </div>
             </article>
 
-            <article class="box3">
+            <article class="resbox3">
                 <p class="nummer">3.</p>
                 <img src="Sources\2.jpg" alt="Omslag The Green Mile" class="box-image">
                 <div class="box-content1">
@@ -65,9 +65,9 @@
                 </div>
             </article>
 
-            <article class="box4">
+            <article class="resbox4">
                 <p class="nummer">4.</p>
-                <img src="Sources/1.jpg" alt="Omslag Sömngångaren" class="box-image">
+                <img src="Sources/sleepwalker.jpg" alt="Omslag Sömngångaren" class="box-image">
                 <div class="box-content1">
                     <h2>Lars Kepler - Sömngångaren</h2>
                     <p>Sömngångaren är en psykologisk thriller som drar dig in i en värld av mysterier och skräck.
@@ -77,7 +77,7 @@
                 </div>
             </article>
 
-            <article class="box5">
+            <article class="resbox5">
                 <p class="nummer">5.</p>
                 <img src="Sources\3.jpg" alt="Omslag The Shawshank Redemption" class="box-image">
                 <div class="box-content1">
@@ -89,7 +89,7 @@
                 </div>
             </article>
 
-            <article class="box6">
+            <article class="resbox6">
                 <p class="nummer">6.</p>
                 <img src="Sources\a court of thorns.jpg" alt="Omslag A Court of Thorns and Roses" class="box-image">
                 <div class="box-content1">
@@ -101,7 +101,7 @@
                 </div>
             </article>
 
-            <article class="box7">
+            <article class="resbox7">
                 <p class="nummer">7.</p>
                 <img src="Sources\shatterme.jpg" alt="Omslag Shatter Me" class="box-image">
                 <div class="box-content1">
@@ -114,7 +114,7 @@
                 </div>
             </article>
 
-            <article class="box8">
+            <article class="resbox8">
                 <p class="nummer">8.</p>
                 <img src="Sources\hungergames.jpg" alt="Omslag Hungerspelen" class="box-image">
                 <div class="box-content1">
@@ -127,7 +127,7 @@
                 </div>
             </article>
 
-            <article class="box9">
+            <article class="resbox9">
                 <p class="nummer">9.</p>
                 <img src="Sources\uraskan.jpg" alt="Omslag Ur Askan" class="box-image">
                 <div class="box-content1">
@@ -140,7 +140,7 @@
                 </div>
             </article>
 
-            <article class="box10">
+            <article class="resbox10">
                 <p class="nummer">10.</p>
                 <img src="Sources\cookbook.jpg" alt="Omslag The Jewish-Japanese Sex and Cook Book" class="box-image">
                 <div class="box-content1">
