--- a/2.html
+++ b/2.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pärmar & Poesi - Nyheter</title>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css"> <!-- Länka till din SASS-kompilerade CSS om du har det -->
+    <link rel="stylesheet" href="style.css"> <!-- Länka till din SASS-kompilerade CSS om du har det -->
 </head>
 
 <body class="font-sans bg-gray-100">
@@ -57,7 +56,7 @@
 
             <!-- Bok 3 -->
             <article class="flex bg-white border border-gray-300 rounded-lg p-4 mb-4 shadow-md">
-                <img src="Sources/sömngångaren.jpg" alt="Omslaget till Sömngångaren av Lars Kepler" class="w-32 h-auto rounded-md shadow-lg mr-4">
+                <img src="Sources/sleepwalker.jpg" alt="Omslaget till Sömngångaren av Lars Kepler" class="w-32 h-auto rounded-md shadow-lg mr-4">
                 <div class="flex-1">
                     <h2 class="text-xl font-semibold">Sömngångaren</h2>
                     <h3 class="text-md">Författare: Lars Kepler</h3>
