--- a/kontakt.html
+++ b/kontakt.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pärmar & Poesi - Kontakta Oss</title>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
-<body class="bg-gray-100">
-
-    <header>
+<body>
+<header>
         <a href="index.html">
             <img src="sources/rättlogo.png" alt="Logo" class="logo">
           </a>
@@ -26,7 +25,42 @@
                 <li><a href="5.html">Kontakt & Hitta</a></li>
             </ul>
         </nav>
-    </header>
+</header>
+
+
+
+
+<article class="kbox1">
+        <h1>Pärmar & Poesi Grönby</h1>
+        <ul class="kontaktli">
+            <li>Öppettider: Mån-Fre 10-18 Lör 10-14 Sön Stängt Lunchstängt 12-13</li>
+            <li>Adress: Grönbyvägen 14, 43141 Grönby</li>
+            <li>Telefon: 0223-11777</li>
+            <li>Mail: PPgronby@mail.se</li>
+        </ul>
+    </div>
+</article>
+<article class="kontaktli">
+    <h1>Pärmar & Poesi Blåby</h1>
+    <ul>
+        <li>Öppettider: Mån-Fre 10-18 Lör-Sön 10-13 Lunchstängt 12-13</li>
+        <li>Adress: Blågatan 26, 71341 Blåby</li>
+        <li>Telefon: 0223-22777</li>
+        <li>Mail: PPblaby@mail.se</li>
+    </ul>
+</div>
+</article>
+<article class="kontaktli">
+<h1>Pärmar & Poesi Rödby</h1>
+<ul>
+    <li>Öppettider: Mån-Fre 10-17 Lör-Sön Stängt Lunchstängt 12-13</li>
+    <li>Adress: Rödavägen 2, 15683 Rödby</li>
+    <li>Telefon: 0223-66777</li>
+    <li>Mail: PProdby@mail.se</li>
+</ul>
+</div>
+</article>
+</section>
 
 <main class="p-5">
     <section id="kontakt">
@@ -47,38 +81,18 @@
             <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded">Skicka</button>
         </form>
     </section>
-</main>
+    </main>
 
-<footer class="flex justify-between items-center p-5 bg-gray-300">
+<footer>
     <p>© Pärmar & Poesi</p>
-    <div class="flex space-x-2">
-        <a href="https://facebook.com"><img src="sources/facebook-app-symbol.png" alt="Facebook" class="w-6 h-6"></a>
-        <a href="https://instagram.com"><img src="sources/instagram.png" alt="Instagram" class="w-6 h-6"></a>
-        <a href="https://twitter.com"><img src="sources/twitter.png" alt="Twitter" class="w-6 h-6"></a>
-        <a href="https://threads.net"><img src="sources/threads.png" alt="Threads" class="w-6 h-6"></a>
-        <a href="https://youtube.com"><img src="sources/youtube.png" alt="YouTube" class="w-6 h-6"></a>
-    </div>
+    <article class="footer-links">
+        <img src="sources/facebook-app-symbol.png" alt="facebook-link">
+        <img src="sources/instagram.png" alt="instagram-link">
+        <img src="sources/twitter.png" alt="twitter-link">
+        <img src="sources/threads.png" alt="twitter-link">
+        <img src="sources/youtube.png" alt="twitter-link">
+</article>
 </footer>
-
-<body>
-    <header>
-        <a href="index.html">
-            <img src="sources/rättlogo.png" alt="Logo" class="logo">
-          </a>
-        <nav>
-            <ul class="nav-list" id="navLinks">
-                <li><a href="index.html">Hem</a></li>
-                <li><a href="erbjudanden.html">Erbjudanden</a></li>
-                <li><a href="kontakt.html">Kontakt & Hitta</a></li>
-            </ul>
-            <input type="checkbox" id="menu-toggle" class="menu-toggle">
-            <label for="menu-toggle" class="hamburger" aria-label="Toggle navigation">&#9776;</label>
-            <ul class="nav-list-mobile" id="navLinksMobile">
-                <li><a href="index.html">Hem</a></li>
-                <li><a href="erbjudanden.html">Erbjudanden</a></li>
-                <li><a href="kontakt.html">Kontakt & Hitta</a></li>
-            </ul>
-        </nav>
-    </header>
+    
 </body>
 </html>
