--- a/3.html
+++ b/3.html
@@ -39,10 +39,10 @@
         <article>
 
             <h2 class="sortiment">Vårat sortiment</h2>
-            <section ::-webkit-scrollbar class="boxes">
+            <section class="boxes">
                 <h2>Skräck</h2>
 
-                <ul class="bokbox">
+                <ul class="scrollable-bokbox">
                     <li><img src="Sources\sortböcker (4).jpg" alt="pärmar och poesi skräckbok"></li>
                     <li><img src="Sources\sortböcker (4).jpg" alt="pärmar och poesi skräckbok"></li>
                     <li><img src="Sources\sortböcker (4).jpg" alt="pärmar och poesi skräckbok"></li>
@@ -54,10 +54,10 @@
                 </ul>
             </section>
 
-            <section ::-webkit-scrollbar class="boxes">
+            <section class="boxes">
                 <h2>Thriller</h2>
 
-                <ul class="bokbox">
+                <ul class="scrollable-bokbox">
                     <li><img src="Sources\sortböcker (3).png" alt="pärmar och poesi thrillerbok"></li>
                     <li><img src="Sources\sortböcker (3).png" alt="pärmar och poesi thrillerbok"></li>
                     <li><img src="Sources\sortböcker (3).png" alt="pärmar och poesi thrillerbok"></li>
@@ -69,10 +69,10 @@
                 </ul>
             </section>
 
-            <section ::-webkit-scrollbar class="boxes">
+            <section class="boxes">
                 <h2>Romantik</h2>
 
-                <ul class="bokbox">
+                <ul class="scrollable-bokbox">
                     <li><img src="Sources\sortböcker (2).jpg" alt="pärmar och poesi romantikbok"></li>
                     <li><img src="Sources\sortböcker (2).jpg" alt="pärmar och poesi romantikbok"></li>
                     <li><img src="Sources\sortböcker (2).jpg" alt="pärmar och poesi romantikbok"></li>
@@ -84,10 +84,10 @@
                 </ul>
             </section>
 
-            <section ::-webkit-scrollbar class="boxes">
+            <section class="boxes">
                 <h2>Drama</h2>
 
-                <ul class="bokbox">
+                <ul class="scrollable-bokbox">
                     <li><img src="Sources\sortböcker (2).png" alt="pärmar och poesi dramabok"></li>
                     <li><img src="Sources\sortböcker (2).png" alt="pärmar och poesi dramabok"></li>
                     <li><img src="Sources\sortböcker (2).png" alt="pärmar och poesi dramabok"></li>
@@ -99,10 +99,10 @@
                 </ul>
             </section>
 
-            <section ::-webkit-scrollbar class="boxes">
+            <section class="boxes">
                 <h2>Deckare</h2>
 
-                <ul class="bokbox">
+                <ul class="scrollable-bokbox">
                     <li><img src="Sources\sortböcker (1).jpg" alt="pärmar och poesi krimbok"></li>
                     <li><img src="Sources\sortböcker (1).jpg" alt="pärmar och poesi krimbok"></li>
                     <li><img src="Sources\sortböcker (1).jpg" alt="pärmar och poesi krimbok"></li>
@@ -114,10 +114,10 @@
                 </ul>
             </section>
 
-            <section ::-webkit-scrollbar class="boxes">
+            <section class="boxes">
                 <h2>Sci-Fi</h2>
 
-                <ul class="bokbox">
+                <ul class="scrollable-bokbox">
                     <li><img src="Sources\sortböcker (3).jpg" alt="pärmar och poesi Scifibok"></li>
                     <li><img src="Sources\sortböcker (3).jpg" alt="pärmar och poesi Scifibok"></li>
                     <li><img src="Sources\sortböcker (3).jpg" alt="pärmar och poesi Scifibok"></li>
@@ -129,10 +129,10 @@
                 </ul>
             </section>
 
-            <section ::-webkit-scrollbar class="boxes">
+            <section class="boxes">
                 <h2>Komedi</h2>
 
-                <ul class="bokbox">
+                <ul class="scrollable-bokbox">
                     <li><img src="Sources\sortböcker (5).png" alt="pärmar och poesi komedibok"></li>
                     <li><img src="Sources\sortböcker (5).png" alt="pärmar och poesi komedibok"></li>
                     <li><img src="Sources\sortböcker (5).png" alt="pärmar och poesi komedibok"></li>
@@ -144,10 +144,10 @@
                 </ul>
             </section>
 
-            <section ::-webkit-scrollbar class="boxes">
+            <section class="boxes">
                 <h2>Historia</h2>
 
-                <ul class="bokbox">
+                <ul class="scrollable-bokbox">
                     <li><img src="Sources\sortböcker (1).png" alt="pärmar och poesi historiabok"></li>
                     <li><img src="Sources\sortböcker (1).png" alt="pärmar och poesi historiabok"></li>
                     <li><img src="Sources\sortböcker (1).png" alt="pärmar och poesi historiabok"></li>
@@ -159,10 +159,10 @@
                 </ul>
             </section>
 
-            <section ::-webkit-scrollbar class="boxes">
+            <section class="boxes">
                 <h2>Poesi</h2>
 
-                <ul class="bokbox">
+                <ul class="scrollable-bokbox">
                     <li><img src="Sources\sortböcker (4).png" alt="pärmar och poesi poesibok"></li>
                     <li><img src="Sources\sortböcker (4).png" alt="pärmar och poesi poesibok"></li>
                     <li><img src="Sources\sortböcker (4).png" alt="pärmar och poesi poesibok"></li>
