--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
         <nav>
             <ul class="nav-list" id="navLinks">
                 <li><a href="Pärmar&Poesi/index.html">Hem</a></li>
-                <li><a href="erbjudanden.html">Erbjudanden</a></li>
-                <li><a href="5.html">Kontakt & Hitta</a></li>
+                <li><a href="3.html">Sortiment</a></li>
+                <li><a href="kontakt.html">Kontakt & Hitta</a></li>
             </ul>
             <input type="checkbox" id="menu-toggle" class="menu-toggle">
             <label for="menu-toggle" class="hamburger" aria-label="Toggle navigation">&#9776;</label>
             <ul class="nav-list-mobile" id="navLinksMobile">
                 <li><a href="index.html">Hem</a></li>
-                <li><a href="erbjudanden.html">Erbjudanden</a></li>
-                <li><a href="5.html">Kontakt & Hitta</a></li>
+                <li><a href="3.html">Sortiment</a></li>
+                <li><a href="kontakt.html">Kontakt & Hitta</a></li>
             </ul>
         </nav>
     </header>
@@ -60,14 +60,16 @@
                   </a>
                 <div class="box-content2">
                     <h2>Top-10</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae aspernatur et, commodi nobis adipisci quas voluptatibus accusantium in hic saepe mollitia dicta nesciunt minus doloribus voluptatum dolore debitis impedit quo!</p>
+                    <p>Pärmar & Poesis topp 10 böcker med recensioner!</p>
                 </div>
             </article>
             <article class="box3">
-                <img src="Sources\3.jpg" alt="The Shawshank Redemption" class="box-image">
+                <a href="2.html">
+                    <img src="sources/news.jpg" alt="Top-10-alt" class="small-box-image">
+                  </a>
                 <div class="box-content3">
                     <h2>Våra nyheter</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore commodi nihil quae alias, expedita quasi in obcaecati aspernatur, nisi corrupti reprehenderit eius quidem quibusdam asperiores a? Corrupti nemo tempora aspernatur?</p>
+                    <p>Håll dig uppdaterad med Pärmar & Poesis fräschaste böcker!</p>
                 </div>
             </article>
         </section>
@@ -75,7 +77,9 @@
         <section class="small-boxes">
 
             <article class="small-box1">
-                <img src="Sources/kungen.jpg" alt="Placeholder Image" class="small-box-image">
+                <a href="6.html">
+                    <img src="sources/kungen.jpg" alt="kungen-alt" class="small-box-image">
+                  </a>
                 <div class="small-box-content">
                     <h2>Kungens Favoriter</h2>
                     <p>Karl Gustav rankar sina topp 3 favoritböcker efter omslag.</p>
