--- a/1.html
+++ b/1.html
@@ -28,7 +28,7 @@
     </header>
 
         <main>
-            <h1>Våra Recensioner - Topp 10</h1>
+            <h1 class="recenstion-head">Våra Recensioner - Topp 10</h1>
         <section class="boxes">
             <article class="resbox1">
                 <p class="nummer">1.</p>
