--- a/2.html
+++ b/2.html
@@ -10,19 +10,21 @@
 
 <body class="font-sans bg-gray-100">
 
-    <header class="flex justify-between items-center p-4 bg-gray-300">
-        <img src="sources/logo.png" alt="Logo" class="logo rounded-full w-32 h-auto">
+    <header>
+        <a href="index.html">
+            <img src="sources/rättlogo.png" alt="Logo" class="logo">
+          </a>
         <nav>
             <ul class="nav-list" id="navLinks">
                 <li><a href="Pärmar&Poesi/index.html">Hem</a></li>
-                <li><a href="erbjudanden.html">Erbjudanden</a></li>
+                <li><a href="3.html">Sortiment</a></li>
                 <li><a href="kontakt.html">Kontakt & Hitta</a></li>
             </ul>
             <input type="checkbox" id="menu-toggle" class="menu-toggle">
             <label for="menu-toggle" class="hamburger" aria-label="Toggle navigation">&#9776;</label>
             <ul class="nav-list-mobile" id="navLinksMobile">
-                <li><a href="Pärmar&Poesi/index.html">Hem</a></li>
-                <li><a href="erbjudanden.html">Erbjudanden</a></li>
+                <li><a href="index.html">Hem</a></li>
+                <li><a href="3.html">Sortiment</a></li>
                 <li><a href="kontakt.html">Kontakt & Hitta</a></li>
             </ul>
         </nav>
