--- a/4.html
+++ b/4.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pärmar & Poesi</title>
-    <link rel="stylesheet" href="stylee.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -28,54 +28,49 @@
     </header>
 
         <main class="main-text">
-            <h1 class="welcome-text">Evenemang 2024</h1>
+            <h1 class="evenemang-text">Evenemang 2024</h1>
         </main>
 
 
-
             <article class="ebox1">
-                    <h1>28/10</h1>
-                    <h2>Bokmässan i Grönby</h2>
-
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae aspernatur et, commodi nobis adipisci quas voluptatibus accusantium in hic saepe mollitia dicta nesciunt minus doloribus voluptatum dolore debitis impedit quo!</p>
-                </div>
+                    <h1 class="nummere">28/10</h1>
+                    <h2 class="h2e">Bokmässan i Grönby</h2>
+                    <p class="pe">Litteraturens höjdpunkt i Grönby! Kom och vandra bland böcker, försvinn i ett hav av ord, <br/>
+                        och försök att inte fastna i en oändlig diskussion om poesi med den lokala bibliotekschefen.</p>
             </article>
+
             <article class="ebox2">
-                <h1>3/11</h1>
-                <h2>Peter Jihde  På besök</h2>
+                <h1 class="nummere">3/11</h1>
+                <h2 class="h2e">Peter Jihde  På besök</h2>
 
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae aspernatur et, commodi nobis adipisci quas voluptatibus accusantium in hic saepe mollitia dicta nesciunt minus doloribus voluptatum dolore debitis impedit quo!</p>
-            </div>
+                <p class="pe">Den populära TV-profilen gästar Grönby! <br/>
+                    Kom och hör Peter Jihde dela med sig av spännande berättelser och få en inblick i hans liv bortom TV-rutan.<br/>
+                     Det blir en kväll full av intressanta samtal och kanske några överraskningar.</p>
             </article>
-            <article class="ebox3">
-                <h1>14/11</h1>
-                <h2>Kungen På besök</h2>
 
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae aspernatur et, commodi nobis adipisci quas voluptatibus accusantium in hic saepe mollitia dicta nesciunt minus doloribus voluptatum dolore debitis impedit quo!</p>
-            </div>
+            <article class="ebox3">
+                <h1 class="nummere">14/11</h1>
+                <h2 class="h2e">Kungen På besök</h2>
+                <p class="pe">Vad är bättre än en kunglig närvaro? Ta chansen att träffa Kungen själv när han tar en tur till Grönby.<br/>
+                     Glöm inte att öva på ditt kungliga vink!</p>
+
             </article>
             <article class="ebox4">
-                <h1>24/11</h1>
-                <h2>Bokbytardagen i Grönby,Rödby och Blåby.</h2>
-
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae aspernatur et, commodi nobis adipisci quas voluptatibus accusantium in hic saepe mollitia dicta nesciunt minus doloribus voluptatum dolore debitis impedit quo!</p>
-            </div>
+                <h1 class="nummere">24/11</h1>
+                <h2 class="h2e">Bokbytardagen i Grönby,Rödby och Blåby.</h2>
+                <p class="pe">Förena tre byar och förvandla din bokhylla! Byt din gamla bok mot något nytt och spännande,<br/>
+                     men var beredd du kanske går hem med en 1000-sidors tegelsten!</p>
             </article>
+
             <article class="ebox5">
-                <h1>20/12</h1>
-                <h2>Tomten på besök</h2>
+                <h1 class="nummere">20/12</h1>
+                <h2 class="h2e">Tomten på besök</h2>
 
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae aspernatur et, commodi nobis adipisci quas voluptatibus accusantium in hic saepe mollitia dicta nesciunt minus doloribus voluptatum dolore debitis impedit quo!</p>
-            </div>
+                <p class="pe">Tomten dyker upp i Grönby! Han har kanske med sig klappar, <br/>
+                     eller bara en tom säck och ett stort sug efter pepparkakor.<br/>
+                      Klarar du att hålla dig på hans "snäll-lista"?</p>
             </article>
-            <article class="ebox6">
-                <h1>20/12</h1>
-                <h2>Tomten på besök</h2>
-
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae aspernatur et, commodi nobis adipisci quas voluptatibus accusantium in hic saepe mollitia dicta nesciunt minus doloribus voluptatum dolore debitis impedit quo!</p>
-            </div>
-            </article>
-        </section>
+         
 
 
         <footer>
